[package]
name = "rhpid-git-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
libadwaita = { version = "0.5.3", features = ["v1_4"] }
